Adding CNN model and Data adjustment

--- a/class_nn_aug.ipynb
+++ b/class_nn_aug.ipynb
@@ -22,6 +22,94 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  0.]\n",
+      " [ 0.  0.]]\n",
+      "[[[ 0.]\n",
+      "  [ 0.]]\n",
+      "\n",
+      " [[ 0.]\n",
+      "  [ 0.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.zeros((2, 2))\n",
+    "print(a)\n",
+    "b = a.reshape((2, 2, 1))\n",
+    "print(b)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "(256, 256, 4)\n",
+      "(256, 256)\n",
+      "(28, 28)\n",
+      "<class 'PIL.BmpImagePlugin.BmpImageFile'>\n",
+      "<class 'PIL.Image.Image'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "(28, 28)\n",
+      "(28, 28, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#====Trials\n",
+    "img = pltim.imread(\"Ellipse_TS/ellipse1.bmp\", format=\"bmp\")\n",
+    "print(type(img))\n",
+    "print(img.shape)\n",
+    "\n",
+    "img2 = im.open(\"Ellipse_TS/ellipse1.bmp\")\n",
+    "# imgplt2 = plt.pyplot.imshow(img2)\n",
+    "# print(img2)\n",
+    "img2.show()\n",
+    "print(img2.size)\n",
+    "img2.thumbnail((28,28))\n",
+    "print(img2.size)\n",
+    "img2.show()\n",
+    "gray_img = img2.convert('L')\n",
+    "gray_img.show()\n",
+    "# print(gray_img.shape)\n",
+    "\n",
+    "\n",
+    "# convtonp =  np.ndarray([28, 28, 1])\n",
+    "convtonp = np.array(gray_img)\n",
+    "\n",
+    "imgF = img.flatten() \n",
+    "print(type(img2))\n",
+    "print(type(gray_img))\n",
+    "print(type(convtonp))\n",
+    "print(convtonp.shape)\n",
+    "c = convtonp.reshape((28, 28, 1))\n",
+    "print(c.shape)\n",
+    "# print(c)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
@@ -86,12 +174,12 @@
     "img2 = im.open(\"Diamond_TS/\" + all_photos_names[170])\n",
     "img2.show()  \n",
     "print(all_photos[170].shape)\n",
-    "print(type(all_photos[170]))\n"
+    "print(type(all_photos[170]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -117,7 +205,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "(784,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Debugginig\n",
+    "print(type(all_photosF[5]))\n",
+    "print(all_photosF[5].shape)\n",
+    "# print(all_photosF[8])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -141,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -175,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -209,215 +322,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "def weight_variable(shape):\n",
-    "    initial = tf.truncated_normal(shape, stddev=0.1)\n",
-    "    return tf.Variable(initial)\n",
-    "\n",
-    "def bias_variable(shape):\n",
-    "    initial = tf.constant(0.1, shape=shape)\n",
-    "    return tf.Variable(initial)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "def conv2d(x, W):\n",
-    "    return tf.nn.conv2d(x, W, strides=[1, 1, 1, 1], padding='SAME')\n",
-    "\n",
-    "def max_pool_2x2(x):\n",
-    "    return tf.nn.max_pool(x, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='SAME')\n",
-    "\n",
-    "keep_prob = tf.placeholder(tf.float32)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "#Inputs\n",
-    "x = tf.placeholder(tf.float32, shape=[None, 784])\n",
-    "x_image = tf.reshape(x, [-1, 28, 28, 1])\n",
-    "\n",
-    "#Gorund truth\n",
-    "y_ = tf.placeholder(tf.float32, [None, 3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(?, 28, 28, 64)\n",
-      "(?, 50176)\n",
-      "Tensor(\"Variable_4/read:0\", shape=(50176, 256), dtype=float32)\n"
-     ]
-    }
-   ],
-   "source": [
-    "#--Layer1\n",
-    "W_conv1 = weight_variable([5, 5, 1, 32])\n",
-    "b_conv1 = bias_variable([32])\n",
-    "batch_norm_conv1 = tf.contrib.layers.batch_norm(conv2d(x_image, W_conv1) + b_conv1)\n",
-    "h_conv1 = tf.nn.relu(batch_norm_conv1)\n",
-    "h_conv1_drop = tf.nn.dropout(h_conv1, 0.5)\n",
-    "#h_pool1 = max_pool_2x2(h_conv1)\n",
-    "\n",
-    "#--Layer2\n",
-    "W_conv2 = weight_variable([3, 3, 32, 64])\n",
-    "b_conv2 = bias_variable([64])\n",
-    "batch_norm_conv2 = tf.contrib.layers.batch_norm( conv2d(h_conv1_drop, W_conv2) + b_conv2 )\n",
-    "h_conv2 = tf.nn.relu( batch_norm_conv2)\n",
-    "h_conv2_drop = tf.nn.dropout(h_conv2, 0.8)\n",
-    "print (h_conv2_drop.shape)\n",
-    "\n",
-    "#--fc1\n",
-    "W_fc1 = weight_variable([28 * 28 * 64, 256])\n",
-    "b_fc1 = bias_variable([256])\n",
-    "h_conv2_flat = tf.reshape(h_conv2_drop, [-1, 28*28*64])\n",
-    "batch_norm_fc1 = tf.contrib.layers.batch_norm( tf.matmul(h_conv2_flat, W_fc1) + b_fc1 )\n",
-    "h_fc1 = tf.nn.relu(batch_norm_fc1)\n",
-    "h_fc1_drop = tf.nn.dropout(h_fc1, 0.6)\n",
-    "print (h_conv2_flat.shape)\n",
-    "print(W_fc1)\n",
-    "\n",
-    "#--fc3\n",
-    "W_fc2 = weight_variable([256, 64])\n",
-    "b_fc2 = bias_variable([64])\n",
-    "batch_norm_fc2 = tf.contrib.layers.batch_norm( tf.matmul(h_fc1_drop, W_fc2)  + b_fc2 )\n",
-    "h_fc2 = tf.nn.relu(batch_norm_fc2)\n",
-    "h_fc2_drop = tf.nn.dropout(h_fc2, 0.9)\n",
-    "\n",
-    "#Readout layer\n",
-    "W_fc3 = weight_variable([64, 3])\n",
-    "b_fc3 = bias_variable([3])\n",
-    "\n",
-    "y_conv = tf.matmul(h_fc2_drop, W_fc3) + b_fc3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "#Evaluate error\n",
-    "cross_entropy = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(labels=y_, logits=y_conv))\n",
-    "#Update params\n",
-    "train_step = tf.train.AdamOptimizer(1e-4).minimize(cross_entropy)\n",
-    "#compare with the ground truth\n",
-    "correct_prediction = tf.equal(tf.argmax(y_conv, 1), tf.argmax(y_, 1))\n",
-    "accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "sess = tf.InteractiveSession()\n",
-    "sess.run(tf.global_variables_initializer())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true,
-    "scrolled": true
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 0, training accuracy 0.32381\n",
-      "step 100, training accuracy 0.909524\n",
-      "step 200, training accuracy 0.942857\n",
-      "step 300, training accuracy 0.966667\n",
-      "step 400, training accuracy 0.985714\n",
-      "step 500, training accuracy 1\n",
-      "step 600, training accuracy 1\n",
-      "step 700, training accuracy 1\n",
-      "step 800, training accuracy 1\n",
-      "step 900, training accuracy 1\n",
-      "step 1000, training accuracy 1\n",
-      "step 1100, training accuracy 1\n",
-      "step 1200, training accuracy 1\n",
-      "step 1300, training accuracy 1\n",
-      "step 1400, training accuracy 1\n",
-      "step 1500, training accuracy 1\n",
-      "step 1600, training accuracy 1\n",
-      "step 1700, training accuracy 1\n",
-      "step 1800, training accuracy 1\n",
-      "step 1900, training accuracy 1\n",
-      "take time: 14.941240994135539\n"
+      "(?, 784)\n",
+      "(?, 3)\n"
      ]
     }
    ],
    "source": [
-    "from time import time\n",
+    "#building the model\n",
+    "#inputs\n",
+    "x = tf.placeholder(tf.float32, shape=[None, 784])\n",
     "\n",
-    "tic = time()\n",
+    "#Paramaters\n",
+    "W = tf.Variable(tf.zeros([784,3]))\n",
+    "b = tf.Variable(tf.zeros([3]))\n",
     "\n",
+    "#output\n",
+    "y = tf.matmul(x,W) + b\n",
+    "y_softmax = tf.nn.softmax(y)\n",
     "\n",
-    "for i in range(2000):\n",
+    "#Gorund truth\n",
+    "y_ = tf.placeholder(tf.float32, [None, 3])\n",
     "\n",
-    "    if i % 100 == 0:\n",
-    "        train_accuracy = accuracy.eval(feed_dict={x: X_tr, y_: y_tr})\n",
-    "        print('step %d, training accuracy %g' % (i, train_accuracy))\n",
-    "\n",
-    "    #train_step.run(feed_dict={x: X_tr, y_: y_tr, keep_prob: 0.5}) how to not to use dropout in test?\n",
-    "    train_step.run(feed_dict={x: X_tr, y_: y_tr})\n",
-    "    \n",
-    "toc = time()\n",
-    "\n",
-    "print('take time: %s' %((toc - tic)/60))"
+    "print(x.shape)\n",
+    "print(y_.shape)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "#Compute Loss\n",
+    "cross_entropy = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(labels=y_, logits=y))\n",
+    "\n",
+    "#Update to improve this loss margin\n",
+    "train_step = tf.train.AdamOptimizer(1e-4).minimize(cross_entropy)\n",
+    "\n",
+    "#Now We can launch the model\n",
+    "sess = tf.InteractiveSession()\n",
+    "sess.run(tf.global_variables_initializer())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
@@ -427,19 +392,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test accuracy 0.911111\n"
+      "Ellapsed Time: \n",
+      "0:00:20.825454\n"
+     ]
+    }
+   ],
+   "source": [
+    "#train 1000 step\n",
+    "from datetime import datetime\n",
+    "start=datetime.now()\n",
+    "\n",
+    "for _ in range(10000):\n",
+    "#     batch_xs, batch_ys = X_tr[i:i+3], y_tr[i:i+3]\n",
+    "#     sess.run(train_step)\n",
+    "    sess.run(train_step, feed_dict={x: X_tr, y_: y_tr})\n",
+    "\n",
+    "print(\"Ellapsed Time: \")\n",
+    "print (datetime.now()-start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.844445\n"
      ]
     }
    ],
    "source": [
     "#Evaluating\n",
-    "print('test accuracy %g' % accuracy.eval(feed_dict={x: X_v, y_: y_v}))\n",
-    "writer = tf.summary.FileWriter('./Model_Summary' , sess.graph)"
+    "correct_prediction = tf.equal(tf.argmax(y,1), tf.argmax(y_,1))\n",
+    "\n",
+    "accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
+    "print(sess.run(accuracy, feed_dict={x: X_v, y_: y_v})) #!!!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -447,9 +446,11 @@
    },
    "outputs": [],
    "source": [
+    "#converting it into CNN \n",
+    "#Data augmentation\n",
     "#Where are my weights now?! \n",
     "#batches\n",
-    "#check_ponits(every specific time ?!) mkanha feen sa7?!\n",
+    "#check_ponits(every specific time ?!)\n",
     "#Save, Restore\n",
     "#Analysis (model summary and tensorboard)\n",
     "#Converting to cnn"
@@ -457,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -467,7 +468,7 @@
    "source": [
     "#Saving and creating checkpoints\n",
     "saver = tf.train.Saver()\n",
-    "save_path = saver.save(sess, \"chkpts/model_1Cnn.ckpt\")"
+    "save_path = saver.save(sess, \"chkpts/model_3n.ckpt\")"
    ]
   },
   {
@@ -502,33 +503,46 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "You can easily specify the names and variables to save or load by passing to the tf.train.Saver() constructor either of the following:\n",
+    "\n",
+    "A list of variables (which will be stored under their own names).\n",
+    "A Python dictionary in which keys are the names to use and the values are the variables to manage.\n",
+    "Continuing from the save/restore examples shown earlier:\n",
+    "\n",
+    "tf.reset_default_graph()\n",
+    "# Create some variables.\n",
+    "v1 = tf.get_variable(\"v1\", [3], initializer = tf.zeros_initializer)\n",
+    "v2 = tf.get_variable(\"v2\", [5], initializer = tf.zeros_initializer)\n",
+    "\n",
+    "# Add ops to save and restore only `v2` using the name \"v2\"\n",
+    "saver = tf.train.Saver({\"v2\": v2})\n",
+    "\n",
+    "# Use the saver object normally after that.\n",
+    "with tf.Session() as sess:\n",
+    "  # Initialize v1 since the saver will not.\n",
+    "  v1.initializer.run()\n",
+    "  saver.restore(sess, \"/tmp/model.ckpt\")\n",
+    "\n",
+    "  print(\"v1 : %s\" % v1.eval())\n",
+    "  print(\"v2 : %s\" % v2.eval())\n",
+    "  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "                <audio controls=\"controls\" autoplay=\"autoplay\">\n",
-       "                    <source src=\"./sound/finish.mp3\" type=\"audio/mpeg\" />\n",
-       "                    Your browser does not support the audio element.\n",
-       "                </audio>\n",
-       "              "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.Audio object>"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import Audio\n",
     "sound_file = './sound/finish.mp3'\n",
